feat(-): add seo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reshume - Rewrite your career story</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Reshume - Rewrite your career story | Free Resume Generator</title>
+    <meta
+      name="title"
+      content="Reshume - Rewrite your career story | Free Resume Generator"
+    />
+    <meta
+      name="description"
+      content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required. Free resume generator with multi-language support."
+    />
+    <meta
+      name="keywords"
+      content="resume generator, CV builder, resume maker, ATS resume, professional resume, free resume, career, job application, resume template"
+    />
+    <meta name="author" content="Marcos Dionel Iannibelli" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://reshume.com/" />
+    <meta property="og:title" content="Reshume - Rewrite your career story" />
+    <meta
+      property="og:description"
+      content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
+    />
+    <meta property="og:image" content="https://reshume.com/og-image.png" />
+    <meta property="og:site_name" content="Reshume" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://reshume.com/" />
+    <meta name="twitter:title" content="Reshume - Rewrite your career story" />
+    <meta
+      name="twitter:description"
+      content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
+    />
+    <meta
+      name="twitter:image"
+      content="https://reshume.com/twitter-image.png"
+    />
+    <meta name="twitter:creator" content="@dioneldev" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="theme-color" content="#ef4444" />
+    <meta name="msapplication-TileColor" content="#ef4444" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="Reshume" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://reshume.com/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Reshume",
+        "description": "Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required.",
+        "url": "https://reshume.com",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Marcos Dionel Iannibelli",
+          "url": "https://mdiannibelli.com"
+        },
+        "featureList": [
+          "Modern and responsive interface",
+          "Step-by-step form",
+          "Real-time validation",
+          "Automatic persistence",
+          "Multi-language support",
+          "PDF generation",
+          "ATS-optimized resumes"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
