feat(-): add fonts

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Preload Critical Fonts for Better Performance -->
+    <link
+      rel="preload"
+      href="/fonts/Inter_18pt-Regular.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/fonts/Inter_18pt-SemiBold.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
       {
