feat(-): add logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       property="og:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta property="og:image" content="https://reshume.com/og-image.png" />
+    <meta property="og:image" content="https://reshume.com/reshume.svg" />
     <meta property="og:site_name" content="Reshume" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
@@ -44,10 +44,7 @@
       name="twitter:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta
-      name="twitter:image"
-      content="https://reshume.com/twitter-image.png"
-    />
+    <meta name="twitter:image" content="https://reshume.com/reshume.svg" />
     <meta name="twitter:creator" content="@dioneldev" />
 
     <!-- Additional Meta Tags -->
@@ -64,7 +61,7 @@
     <link rel="canonical" href="https://reshume.com/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/reshume.svg" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Preconnect for Performance -->
