--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://reshume.com/" />
+    <meta property="og:url" content="https://www.reshume.com/" />
     <meta property="og:title" content="Reshume - Rewrite your career story" />
     <meta
       property="og:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta property="og:image" content="https://reshume.com/reshume.svg" />
+    <meta property="og:image" content="https://www.reshume.com/reshume.svg" />
     <meta property="og:site_name" content="Reshume" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://reshume.com/" />
+    <meta name="twitter:url" content="https://www.reshume.com/" />
     <meta name="twitter:title" content="Reshume - Rewrite your career story" />
     <meta
       name="twitter:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta name="twitter:image" content="https://reshume.com/reshume.svg" />
+    <meta name="twitter:image" content="https://www.reshume.com/reshume.svg" />
     <meta name="twitter:creator" content="@dioneldev" />
 
     <!-- Additional Meta Tags -->
@@ -58,10 +58,14 @@
     <meta name="apple-mobile-web-app-title" content="Reshume" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://reshume.com/" />
+    <link rel="canonical" href="https://www.reshume.com/" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/reshume.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.reshume.com/reshume.svg"
+    />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Preconnect for Performance -->
@@ -91,7 +95,7 @@
         "@type": "WebApplication",
         "name": "Reshume",
         "description": "Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required.",
-        "url": "https://reshume.com",
+        "url": "https://www.reshume.com",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
         "offers": {
