feat(-): add og-logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       property="og:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta property="og:image" content="https://www.reshume.com/reshume.svg" />
+    <meta property="og:image" content="https://www.reshume.com/og-logo.webp" />
     <meta property="og:site_name" content="Reshume" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
@@ -44,7 +44,7 @@
       name="twitter:description"
       content="Create professional, ATS-optimized resumes that increase your chances of getting hired. No design or HR knowledge required."
     />
-    <meta name="twitter:image" content="https://www.reshume.com/reshume.svg" />
+    <meta name="twitter:image" content="https://www.reshume.com/og-logo.webp" />
     <meta name="twitter:creator" content="@dioneldev" />
 
     <!-- Additional Meta Tags -->
@@ -64,7 +64,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://www.reshume.com/reshume.svg"
+      href="https://www.reshume.com/og-logo.webp"
     />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
