--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
           "price": "0",
           "priceCurrency": "USD"
         },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.5",
+          "reviewCount": "100"
+        },
         "author": {
           "@type": "Person",
           "name": "Marcos Dionel Iannibelli",
